--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
+    "form-serialize": "^0.7.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
